--- a/molecule/cluster/converge.yml
+++ b/molecule/cluster/converge.yml
@@ -1,16 +1,15 @@
 ---
 - name: Converge
   hosts: all
-  tasks:
+  become: yes
+  roles:
     - name: "Include haxwithaxe.gluster_cluster"
+      role: "haxwithaxe.gluster_cluster"
       vars:
-        gluster_repo_version: 10
+        gluster_repo_version: 11
         gluster_name: "docker-volumes"
         gluster_brick: "/bricks/docker-volumes"
         gluster_mount_point: "/mnt/docker-volumes"
         gluster_force: yes
         gluster_cluster_group: "production_swarm"
         gluster_volume_group: "docker"
-      become: yes
-      include_role:
-        name: "haxwithaxe.gluster_cluster"
